@@ -421,7 +421,7 @@ sub ScanHeader {
 
 	    # We assume that functions which start with '_' are private, so
 	    # we skip them.
-	    } elsif (m/^\s*(extern)?\s*(G_INLINE_FUNC)?\s*((const\s+|G_CONST_RETURN\s+|unsigned\s+|struct\s+)*\w+(\**\s+\**(const|G_CONST_RETURN))?(\s+|\s*\*+))\s*([A-Za-z]\w*)\s*\(/) {
+	    } elsif (m/^\s*(extern)?\s*(G_INLINE_FUNC)?\s*((const\s+|G_CONST_RETURN\s+|unsigned\s+|struct\s+|enum\s+)*\w+(\**\s+\**(const|G_CONST_RETURN))?(\s+|\s*\*+))\s*([A-Za-z]\w*)\s*\(/) {
 		$ret_type = $3;
 		$symbol = $8;
 		$decl = $';
@@ -439,7 +439,7 @@ sub ScanHeader {
 		$decl = $';
 		if ($previous_line !~ m/^\s*G_INLINE_FUNC/
 		    && $previous_line !~ m/^\s*static\s+/) {
-		    if ($previous_line =~ m/^\s*(extern)?\s*((const\s*|G_CONST_RETURN\s*|unsigned\s*)?\w+)(\s*\*+)?\s*$/) {
+		    if ($previous_line =~ m/^\s*(extern)?\s*((const\s*|G_CONST_RETURN\s*|unsigned\s*|enum\s+)?\w+)(\s*\*+)?\s*$/) {
 			$ret_type = $2;
 			if (defined ($4)) { $ret_type .= " $4"; }
 #			print "Function: $symbol, Returns: $ret_type\n";
@@ -451,7 +451,7 @@ sub ScanHeader {
 	    # on the previous line, and the start of the parameters on this.
 	    } elsif (m/^\s*\(/) {
 		$decl = $';
-		if ($previous_line =~ m/^\s*(extern)?\s*(G_INLINE_FUNC)?\s*((const\s+|G_CONST_RETURN\s+|unsigned\s+)*\w+)(\s+\*+|\*+|\s)\s*([A-Za-z]\w*)\s*$/) {
+		if ($previous_line =~ m/^\s*(extern)?\s*(G_INLINE_FUNC)?\s*((const\s+|G_CONST_RETURN\s+|unsigned\s+|enum\s+)*\w+)(\s+\*+|\*+|\s)\s*([A-Za-z]\w*)\s*$/) {
 		    $ret_type = "$3 $5";
 		    $symbol = $6;
 #		    print "Function: $symbol, Returns: $ret_type\n";
